fix: dropdown hiding behind control bar
this time for good

--- a/frontend/src/apps/meet/index.css
+++ b/frontend/src/apps/meet/index.css
@@ -1,2 +1,6 @@
 @import "./assets/Inter/inter.css";
 @import "frappe-ui/src/style.css";
+
+.dropdown-content {
+	z-index: 9999 !important;
+}
